<resources>
    <string name="app_name">MoviesRateApp</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="server_error">Server error</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="login_signup">Login/Signup</string>
    <string name="need_to_login">you have to login/Signup to continue</string>
    <string name="english">English</string>
    <string name="arabic">اللغة العربية</string>
    <string name="change_language">Change Language</string>
    <string name="WelcomeToTamer">Welcome back!.</string>
    <string name="get_started">Get started</string>
    <string name="hint_email">email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">login</string>
    <string name="or_text">Or</string>
    <string name="screate_text">create account</string>
    <string name="Self">Self. Gratitude. Journal</string>
    <string name="greateful_text">What are grateful for today?</string>
    <string name="get_started_text">Get Started</string>
    <string name="username_hint">username</string>
    <string name="menu_tittle">Add Thoughts</string>
    <string name="signout">Sign out</string>
    <string name="write_a_journal_entry_by_clicking_the_sign">Write a Journal Entry by clicking the sign</string>
    <string name="daarMasr">Daar Maassr</string>
    <string name="eskanEgtmay" translatable="false">Eskan Egtmay</string>
    <string name="eskanGana" translatable="false">Eskan Gana</string>
    <string name="answer_title">Answer Title</string>
    <string name="answer_date" translatable="false">Answer Date</string>
    <string name="Answer_Number">Answer Number</string>
    <string name="import_side">Import Side</string>
    <string name="export_side">Export Side</string>
    <string name="save_button">Save</string>
    <string name="answer">Answer</string>
    <string name="yourPdf">pdf</string>
    <string name="choose_your_selcet_pdf">select Your PDF</string>
    <string name="date_created">Time</string>
    <string name="enter_number">Enter Number</string>
    <string name="add_another_answer">add another answer</string>
    <string name="sure_text">yes</string>
    <string name="no_tcext">no</string>
    <string name="yes_text">yes</string>
    <string name="Click_here_to_download_pdf">Click Here To Download PDF!</string>
    <string name="Editanswer">EditAnswer</string>


</resources>
