<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout

            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/Editanswer"
                android:textSize="18sp"
                android:textStyle="italic" />


            <EditText
                android:id="@+id/answerEditTitle"
                android:layout_below="@id/answerEditNumber"
                android:layout_width="match_parent"
                android:hint="@string/answer_title"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/answerEditDate"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:hint="@string/answer_date"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/answerEditNumber"
                android:layout_below="@id/answerEditDate"
                android:layout_width="match_parent"
                android:hint="@string/Answer_Number"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/red"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/importEditSide"
                android:layout_below="@id/answerEditTitle"
                android:layout_width="match_parent"
                android:hint="@string/import_side"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/exportEditSide"
                android:layout_below="@id/importEditSide"
                android:layout_width="match_parent"
                android:hint="@string/export_side"
                android:layout_height="wrap_content" />

            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uriEditPdf"
                android:hint="@string/choose_your_selcet_pdf"
                android:layout_below="@id/exportEditSide"
                android:textColorHint="@color/colorAccent"
                />



            <Button
                android:id="@+id/saveEditButton"
                android:layout_below="@id/uriEditPdf"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>