<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:padding="15dp">

            <TextView
                android:id="@+id/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/titleAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer"
                android:paddingTop="4dp"
                android:text="@string/answer_title"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/dateAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleAnswer"
                android:text="@string/answer_date"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/numberAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateAnswer"
                android:text="@string/Answer_Number"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/sideImport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pdf"
                android:text="@string/import_side"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sideExport"
                android:layout_below="@+id/sideImport"
                android:text="@string/export_side"
                android:textSize="18sp"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pdf"
                android:text="@string/yourPdf"
                android:layout_below="@+id/numberAnswer"
                android:textSize="18sp"
                android:textStyle="italic"
                />
            <ImageButton
                android:id="@+id/btnRead"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@+id/numberAnswer"
                android:layout_marginEnd="15dp"
                android:layout_alignParentEnd="true"
                android:background="@android:drawable/stat_sys_download" />

            <TextView
                android:id="@+id/egtmay_timestamp_list"
                android:padding="5dp"
                android:text="@string/date_created"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:gravity="end"
                android:layout_height="wrap_content"/>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/sideExport"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_menu_edit" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_delete" />

            </TableRow>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>