<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".draftmvvm.UI.Choose.View.ChooseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgcentercolor"
        app:theme="@style/toolbar_theme"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorWhite"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/ToolbarTextAppearance.Title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:onClick="eskanEgtmai"
        android:background="@color/cardview_shadow_start_color"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"
        android:hint="@string/eskanEgtmay" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:textStyle="bold"
        android:gravity="center"
        android:onClick="daarmasr"
        android:background="@color/background_color"
        android:layout_weight="1"
        android:hint="@string/daarMasr" />
    <TextView
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="34sp"
        android:onClick="eskangana"
        android:background="@color/colorAccent2"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/eskanGana" />


</LinearLayout>