<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".draftmvvm.UI.CreateAccount.View.CreateActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Createacctprogress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/Acct_login_form">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userNameAcct"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="16dp"
            />
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:id="@+id/emailAcct"
            android:hint="@string/hint_email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordAcct"
            android:hint="@string/password_hint"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:maxLines="1"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Create_acct_button"
            android:text="@string/screate_text"
            style="@style/anything"
            android:textStyle="bold"
            />

    </LinearLayout>
</LinearLayout>